add signup page  #156892374

--- a/UI/index.html
+++ b/UI/index.html
@@ -16,7 +16,7 @@
 
 <body>
     <!-- Header -->
-    <header id="showcase" class="grid">
+    <header >
         <nav>
             <div class="menu-icon">
                 <i class="fa fa-bars fa-2x"></i>
@@ -31,14 +31,17 @@
                 </ul>
             </div>
         </nav>
-        <div id="bg-image"></div>
-        <div class="content-wrap words">
-            <div>
-                <h1>Book a Meal</h1>
-                <p>Let's give you a life without having to worry about what to eat everyday of the week, Just Book a Meal.</p>
-                <a href="#section-b" class="btn">Register</a>
+        <div id="showcase" class="grid">
+            <div id="bg-image"></div>
+            <div class="content-wrap words">
+                <div>
+                    <h1>Book a Meal</h1>
+                    <p>Let's give you a life without having to worry about what to eat everyday of the week, Just Book a Meal.</p>
+                    <a href="#section-b" class="btn">Register</a>
+                </div>
             </div>
         </div>
+        
     </header>
 
     <!-- Main -->
