add admin sign in page  #156895870

--- a/UI/admin.html
+++ b/UI/admin.html
@@ -15,26 +15,26 @@
 
     <body>
         <!-- Header -->
-        <header>
+        <header id="admin">
             <nav>
                 <div class="menu-icon">
                     <i class="fa fa-bars fa-2x"></i>
                 </div>
                 <div class="logo">
-                    <a href="index.html">
+                    <a href="#">
                         <img src="images/logo.jpg" alt="">
                     </a>
                 </div>
                 <div class="menu">
                     <ul>
                         <li>
-                            <a href="index.html">Home</a>
+                            <a href="index.html"></a>
                         </li>
                         <li>
-                            <a href="signup.html" >Sign up</a>
+                            <a href="signup.html" ></a>
                         </li>
                         <li>
-                            <a href="signin.html" class="current">Sign in</a>
+                            <a href="signin.html" class="current"></a>
                         </li>
                     </ul>
                 </div>
@@ -46,8 +46,8 @@
             <div >
                 <h1>Login</h1>
                 <form>
-                    <label for="username"></label>
-                    <input type="text" name="username" id="username" class="fa" placeholder="&#xf007  Username">
+                    <label for="admin"></label>
+                    <input type="text" name="admin" id="admin" class="fa" placeholder="&#xf007  Admin">
                     <br>
                     <br>
 
@@ -56,15 +56,8 @@
                     <br>
                     <br>
 
-                    <label for="remember"></label>
-                    <input type="checkbox" name="remember" id="remember">
-                    <span id="remember">Remember me</span>
-                    <br>
-                    <br>
-
                     <button type="submit" id="submit">
                     <i class="fa fa-sign-in"></i> Login</button>
-                    <a href="signup.html">Create an Account?</a>
                 </form>
             </div>
         </section>
