add caterer menu page #156804053

--- a/UI/admin/home.html
+++ b/UI/admin/home.html
@@ -46,10 +46,10 @@
                 <div class="menu-sidebar">
                     <ul>
                         <li>
-                            <a href="menu.html" class="current">Meals</a>
+                            <a href="home.html" class="current">Meals</a>
                         </li>
                         <li>
-                            <a id="status">Status</a>
+                            <a href="menu.html">Menu</a>
                         </li>
                         <li>
                             <a href="signout.html">Sign out</a>
@@ -264,6 +264,7 @@
                 </section>
             </div>
 
+        
             <!--delete meal-->
             <div class="container-popup-delete">
                     <div class="popup_delete">
