add details and summary of order for a day  #156804693

--- a/UI/admin/menu.html
+++ b/UI/admin/menu.html
@@ -64,6 +64,7 @@
             <div class="mainboard">
                 <section id="board">
                     <div class="">
+                            <h1 style="text-align: left;">Admin Menu</h1>
                         <table>
                             <thead>
                                 <tr>
