--- a/UI/menu.html
+++ b/UI/menu.html
@@ -60,6 +60,7 @@
             <div class="mainboard">
                 <section id="board">
                     <div class="">
+                            <h1 style="text-align: left;">Menu</h1>
                         <table>
                             <thead>
                                 <tr>
