--- a/UI/admin/login.html
+++ b/UI/admin/login.html
@@ -44,7 +44,7 @@
         <!--Login Section -->
         <section id="login" class="container">
             <div >
-                <h1>Login</h1>
+                <h1>Admin</h1>
                 <form>
                     <label for="admin"></label>
                     <input type="text" name="admin" id="admin" class="fa" placeholder="&#xf007  Admin">
@@ -66,13 +66,7 @@
         <!--footer-->
         <footer id="footer" class="grid">
             <div class="content-wrap">
-                <div>
-                    <p>connect us at</p>
-                </div>
-                <a href="#" class="fa fa-facebook"></a>
-                <a href="#" class="fa fa-twitter"></a>
-                <a href="#" class="fa fa-instagram"></a>
-                <a href="#" class="fa fa-youtube"></a>
+                
                 <p>&copy; 2018 TmD</p>
             </div>
         </footer>
