--- a/UI/menu.html
+++ b/UI/menu.html
@@ -51,7 +51,10 @@
                             <a id="status">Status</a>
                         </li>
                         <li>
-                            <a href="signout.html">Sign out</a>
+                            <a href="">Your orders</a>
+                        </li>
+                        <li>
+                            <a href="index.html">Sign out</a>
                         </li>
                     </ul>
                 </div>
