--- a/UI/admin/home.html
+++ b/UI/admin/home.html
@@ -25,7 +25,7 @@
                         <li>
                             <a href="signup.html"></a>
                         </li>
-                        
+
                     </ul>
                 </div>
             </nav>
@@ -50,10 +50,14 @@
                             <a href="menu.html">Menu</a>
                         </li>
                         <li>
-                                <a href="order.html">Order</a>
-                            </li>
-                            <li>
+                            <a href="order.html">Order</a>
+                        </li>
+                        <li>
+                            <a href="index.html">Add Admin</a>
+                        </li>
+                        <li>
                             <a href="signout.html">Sign out</a>
+                        </li>
                     </ul>
                 </div>
             </div>
