check the signin/signup background and responsiveness

--- a/UI/signin.html
+++ b/UI/signin.html
@@ -43,7 +43,7 @@
 
         <!--Login Section -->
         <section id="login" class="container">
-            <div >
+            <div class="form-box">
                 <h1>Login</h1>
                 <form>
                     <label for="username"></label>
