--- a/UI/signup.html
+++ b/UI/signup.html
@@ -43,7 +43,7 @@
 
         <!--Sign up -->
         <section id="signup" class="container">
-            <div>
+            <div class="form-box">
                 <h1>Signup</h1>
                 <form>
                     <label for="Fullname"></label>
