work on signin/signup responsiveness

--- a/UI/admin/login.html
+++ b/UI/admin/login.html
@@ -43,9 +43,9 @@
 
         <!--Login Section -->
         <section id="login" class="container">
-            <div >
-                <h1>Admin</h1>
+            <div class="form-box">
                 <form>
+                    <h1>Admin</h1>
                     <label for="admin"></label>
                     <input type="text" name="admin" id="admin" class="fa" placeholder="&#xf007  Admin">
                     <br>
