--- a/UI/index.html
+++ b/UI/index.html
@@ -37,7 +37,7 @@
                 <div>
                     <h1>Book a Meal</h1>
                     <p>Let's give you a life without having to worry about what to eat everyday of the week, Just Book a Meal.</p>
-                    <a href="#section-b" class="fa fa-chevron-circle-down"></a>
+                    <a href="#section-c" class="fa fa-chevron-circle-down"></a>
                 </div>
             </div>
         </div>
