--- a/UI/menu.html
+++ b/UI/menu.html
@@ -88,84 +88,36 @@
                                     <td>check</td>
                                 </tr>
                             </thead>
-                            <tbody>
+                           <tbody>
                                 <tr>
-                                    <td>1</td>
-                                    <td>Jollof-rice</td>
-                                    <td>
-                                        <select name="duration">
-                                            <option value="1">1</option>
-                                            <option value="2">2</option>
-                                            <option value="3">3</option>
-                                            <option value="4">4</option>
-                                            <option value="5">5</option>
-                                            <option value="6">6</option>
-                                            <option value="7">7</option>
-                                            <option value="8">8</option>
-                                            <option value="9">9</option>
-                                            <option value="10">10</option>
-                                    </td>
-                                    <td>
-                                        <a class="fa image" id="img1">&#xf03e</a>
-                                    </td>
-                                    <td> 5000 </td>
-                                    <td>
-                                        <input type="checkbox" name="remember" id="remember"> </td>
-                                </tr>
-                                <tr>
-                                    <td>2</td>
-                                    <td>Chicken-chops</td>
-                                    <td>
-                                        <select name="duration">
-                                            <option value="1">1</option>
-                                            <option value="2">2</option>
-                                            <option value="3">3</option>
-                                            <option value="4">4</option>
-                                            <option value="5">5</option>
-                                            <option value="6">6</option>
-                                            <option value="7">7</option>
-                                            <option value="8">8</option>
-                                            <option value="9">9</option>
-                                            <option value="10">10</option>
-                                    </td>
-                                    <td>
-                                        <a class="fa" id="img2">&#xf03e</a>
-                                    </td>
-                                    <td> 7000 </td>
-                                    <td>
-                                        <input type="checkbox" name="remember" id="remember"> </td>
-                                </tr>
-                                <tr>
-                                    <td>3</td>
-                                    <td>Pounded yam</td>
-                                    <td>
-                                        <select name="duration">
-                                            <option value="1">1</option>
-                                            <option value="2">2</option>
-                                            <option value="3">3</option>
-                                            <option value="4">4</option>
-                                            <option value="5">5</option>
-                                            <option value="6">6</option>
-                                            <option value="7">7</option>
-                                            <option value="8">8</option>
-                                            <option value="9">9</option>
-                                            <option value="10">10</option>
-                                    </td>
-                                    <td>
-                                        <a class="fa image" id="img3">&#xf03e</a>
-                                    </td>
-                                    <td> 7000 </td>
-                                    <td>
-                                        <input type="checkbox" name="remember" id="remember"> </td>
-                                </tr>
-                                <tr>
-                                    <td colspan="6" id="total"> Total(&#8358;) = 15000</td>
-                                </tr>
-
-                            </tbody>
+                                        <td>1</td>
+                                        <td>Jollof-rice</td>
+                                        <td>
+                                            <select name="duration">
+                                                <option value="1">1</option>
+                                                <option value="2">2</option>
+                                                <option value="3">3</option>
+                                                <option value="4">4</option>
+                                                <option value="5">5</option>
+                                                <option value="6">6</option>
+                                                <option value="7">7</option>
+                                                <option value="8">8</option>
+                                                <option value="9">9</option>
+                                                <option value="10">10</option>
+                                            </select>
+                                        </td>
+                                        <td>
+                                            <a class="fa image" id="img1">&#xf03e;</a>
+                                        </td>
+                                        <td> 5000 </td>
+                                        <td>
+                                            <input type="checkbox" name="remember" id="remember"> 
+                                        </td>
+                                    </tr>
+                           </tbody>
                             <tfoot>
                                 <tr>
-                                    <td colspan="7">
+                                    <td colspan="6">
                                         <button type="submit">Order</button>
 
                                     </td>
