--- a/UI/signin.html
+++ b/UI/signin.html
@@ -44,8 +44,9 @@
         <!--Login Section -->
         <section id="login" class="container">
             <div class="form-box">
-                <h1>Login</h1>
-                <form>
+               
+                <form action="menu.html">
+                        <h1>Login</h1>
                     <label for="username"></label>
                     <input type="text" name="username" id="username" class="fa" placeholder="&#xf007  Username">
                     <br>
