--- a/UI/admin/login.html
+++ b/UI/admin/login.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Book-a-Meal | Admin</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="./../style.css">
+    <link rel="stylesheet" href="./../styles/style.css">
     <link href="https://fonts.googleapis.com/css?family=Acme|Anton|Fugaz+One|Great+Vibes|Parisienne|Cookie|Lobster+Two|Satisfy"
         rel="stylesheet">
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
@@ -41,11 +41,11 @@
             </nav>
         </header>
 
-        <!--Login Section -->
-        <section id="login" class="container">
-            <div >
-                <h1>Admin</h1>
+         <!--Login Section -->
+         <section id="login" class="container">
+            <div class="form-box">
                 <form>
+                    <h1>Admin</h1>
                     <label for="admin"></label>
                     <input type="text" name="admin" id="admin" class="fa" placeholder="&#xf007  Admin">
                     <br>
@@ -71,6 +71,4 @@
             </div>
         </footer>
         <script src="./../script.js"></script>
-    </body>
-
-</html>
+ </body>
