--- a/UI/admin/order.html
+++ b/UI/admin/order.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Book-a-Meal | Admin</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="./../style.css">
+    <link rel="stylesheet" href="./../styles/style.css">
     <link href="https://fonts.googleapis.com/css?family=Acme|Anton|Fugaz+One|Great+Vibes|Parisienne|Cookie|Lobster+Two|Satisfy"
         rel="stylesheet">
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
@@ -43,7 +43,7 @@
                 <div class="menu-icon">
                     <i class="fa fa-bars fa-2x"></i>
                 </div>
-                <div class="menu-sidebar">
+                <div class="sidebar">
                     <ul>
                         <li>
                             <a href="home.html">Meals</a>
@@ -53,6 +53,9 @@
                         </li>
                         <li>
                             <a href="order.html" class="current">Order</a>
+                        </li>
+                        <li>
+                            <a href="index.html">Add Admin</a>
                         </li>
                         <li>
                             <a href="signout.html">Sign out</a>
