--- a/UI/admin/home.html
+++ b/UI/admin/home.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Book-a-Meal | Admin</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="./../style.css">
+    <link rel="stylesheet" href="./../styles/style.css">
     <link href="https://fonts.googleapis.com/css?family=Acme|Anton|Fugaz+One|Great+Vibes|Parisienne|Cookie|Lobster+Two|Satisfy"
         rel="stylesheet">
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
@@ -41,7 +41,7 @@
                 <div class="menu-icon">
                     <i class="fa fa-bars fa-2x"></i>
                 </div>
-                <div class="menu-sidebar">
+                <div class="sidebar">
                     <ul>
                         <li>
                             <a href="home.html" class="current">Home</a>
@@ -61,6 +61,7 @@
                     </ul>
                 </div>
             </div>
+
             <div class="mainboard">
                 <section id="board">
                     <div class="">
@@ -83,52 +84,52 @@
                                 </tr>
                             </thead>
                             <tbody>
-                                <tr>
-                                    <td>1</td>
-                                    <td>Jollof Rice</td>
-                                    <td>Intercontinental-dish</td>
-                                    <td>10,000</td>
-                                    <td>
-                                        <a class="fa image" id="img1">&#xf03e</a>
-                                    </td>
-                                    <td class="edit-Meal">
-                                        <a class="fa">&#xf044</a>
-                                    </td>
-                                    <td class="del-Meal">
-                                        <a class="fa">&#xf00d</a>
-                                    </td>
-                                </tr>
-                                <tr>
-                                    <td>2</td>
-                                    <td>Amala</td>
-                                    <td>Local</td>
-                                    <td>15,000</td>
-                                    <td>
-                                        <a class="fa image" id="img1">&#xf03e</a>
-                                    </td>
-                                    <td class="edit-Meal">
-                                        <a class="fa">&#xf044</a>
-                                    </td>
-                                    <td class="del-Meal">
-                                        <a class="fa">&#xf00d</a>
-                                    </td>
-                                </tr>
-                                <tr>
-                                    <td>3</td>
-                                    <td>Ofada Rice</td>
-                                    <td>Local</td>
-                                    <td>11,000</td>
-                                    <td>
-                                        <a class="fa image" id="img1">&#xf03e</a>
-                                    </td>
-                                    <td class="edit-Meal">
-                                        <a class="fa">&#xf044</a>
-                                    </td>
-                                    <td class="del-Meal">
-                                        <a class="fa">&#xf00d</a>
-                                    </td>
-                                </tr>
-                            </tbody>
+                                    <tr>
+                                        <td>1</td>
+                                        <td>Jollof Rice</td>
+                                        <td>Intercontinental-dish</td>
+                                        <td>10,000</td>
+                                        <td>
+                                            <a class="fa image" id="img1">&#xf03e</a>
+                                        </td>
+                                        <td class="edit-Meal">
+                                            <a class="fa">&#xf044</a>
+                                        </td>
+                                        <td class="del-Meal">
+                                            <a class="fa">&#xf00d</a>
+                                        </td>
+                                    </tr>
+                                    <tr>
+                                        <td>2</td>
+                                        <td>Amala</td>
+                                        <td>Local</td>
+                                        <td>15,000</td>
+                                        <td>
+                                            <a class="fa image" id="img1">&#xf03e</a>
+                                        </td>
+                                        <td class="edit-Meal">
+                                            <a class="fa">&#xf044</a>
+                                        </td>
+                                        <td class="del-Meal">
+                                            <a class="fa">&#xf00d</a>
+                                        </td>
+                                    </tr>
+                                    <tr>
+                                        <td>3</td>
+                                        <td>Ofada Rice</td>
+                                        <td>Local</td>
+                                        <td>11,000</td>
+                                        <td>
+                                            <a class="fa image" id="img1">&#xf03e</a>
+                                        </td>
+                                        <td class="edit-Meal">
+                                            <a class="fa">&#xf044</a>
+                                        </td>
+                                        <td class="del-Meal">
+                                            <a class="fa">&#xf00d</a>
+                                        </td>
+                                    </tr>
+                                </tbody>                          
                         </table>
                     </div>
                 </section>
@@ -325,33 +326,3 @@
     </body>
 
 </html>
-
-
-<!--Pop ups--
-        <div class="container-popup">
-                <div class="popup">
-                    <span id="close">&times;</span>
-                        <p>Do you want to?</p>
-                        <div class="options">
-                            <a href="">Ok</a>
-                            <a href="">Check-Order</a>
-                        </div>
-                </div>
-            </div>
-        <div class="cover">
-        </div>
-
-        <class--Modal--
-
-        <div id="delCenter">
-                <section id = "delCenter_content">
-                  <span class="close">&times;</span>
-                      <div class = "container">
-                          <p><i class="fa fa-exclamation-circle"></i> Are you sure you want to delete this center?</p>
-                          <div class="btn">
-                              <button>Delete</button>
-                              <button>Cancel</button>
-                          </div>
-                      </div>
-                </section>
-            </div>
